# watch-files

./: Cargo.toml  LICENSE-MIT  README.md
examples/: long_creation.rs  multithreaded.rs  simple.rs
src/: lib.rs  processor.rs  watcher.rs
